feat: rename planets and see planet names in map
